tests/ui/parser/fn-field-parse-error-ice.stderr
error: expected `,`, or `}`, found keyword `fn`
  --> $DIR/fn-field-parse-error-ice.rs:4:16
   |
LL |     inner : dyn fn ()
   |                ^ help: try adding a comma: `,`

error: expected identifier, found keyword `fn`
  --> $DIR/fn-field-parse-error-ice.rs:4:17
   |
LL | struct Baz {
   |        --- while parsing this struct
LL |     inner : dyn fn ()
   |                 ^^ expected identifier, found keyword
   |
help: escape `fn` to use it as an identifier
   |
LL |     inner : dyn r#fn ()
   |                 ++

error: aborting due to 2 previous errors

