tests/ui/parser/fn-field-parse-error-ice.rs
// Regression test for #85794

struct Baz {
    inner : dyn fn ()
    //~^ ERROR expected `,`, or `}`, found keyword `fn`
    //~| ERROR expected identifier, found keyword `fn`
}

fn main() {}
